--- a/deuce/templates/base.html
+++ b/deuce/templates/base.html
@@ -37,12 +37,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Deuce Thumbs Up</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li class="active"><a href="#">Locations</a></li>
+            {#<li><a href="#about">About</a></li>#}
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -54,7 +54,6 @@
       <div class="starter-template">
             
            <h1>{{ title }}</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
           {% block main_content %}
           {% endblock %}
       </div>
